--- a/LemonPie/index.html
+++ b/LemonPie/index.html
@@ -12,17 +12,14 @@
     <header>
         <img src="img/Group (1).png" alt="Logo">
         <br>
-        
-
-    </header>
+        </header>
     <main>
         <section>
             <br>
-            <div><img src="img/lemon-pie 1.jpg" alt="Imagen de lemon pie"></div></section>
+            <div><img src="img/lemon-pie 1.jpg" alt="Imagen de lemon pie"></div>
        
         <h1>El Clásico Lemon Pie</h1>
 
-         <section>
         <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una
             base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso
             mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
