--- a/PetShop/index.html
+++ b/PetShop/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>PetShop</title>
 </head>
 
 <body>
     <header>
-        <div>
+        <div id="principal">
             <p>Grandes ofertas en comederos </p>
             <p>Español</p>
             <p>ARG$</p>
         </div>
-        <div>
+        <div id="logo">
             <a href=""><img src="img/Logo.png" alt="Logo">
                 <h1></h1>
                         <img src="" alt="">
@@ -30,10 +31,9 @@
         </div>
     </header>
     <main>
-        <section></section>
-        <section>
+        
+        <section id="slide">
             <div> 
-                <img src="img/bowl-and-pet-daities-on-green-background 1.png" alt="imagen principal">
                 <p>¡Es un placer tenerte aqui!</p>
                 <p>¡comederos en descuento!</p>
                 <p>COMEDEROS</p>
